fix: Renombrar y arreglar sample